# innotter

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yaml
innotter/: Dockerfile  entrypoint.sh  pyproject.toml
innotter/innotter/: asgi.py  celery.py  middleware.py  producer.py  settings.py  urls.py  wsgi.py
innotter/page/: admin.py  exceptions.py  models.py  permissions.py  serializer.py  urls.py  utils.py  views.py
innotter/page/migrations/: 0001_initial.py  0002_remove_page_uuid.py  0003_alter_page_name.py  0004_page_owner_group_id.py  0005_alter_page_owner.py  0006_alter_page_image.py  0007_alter_page_name.py  0008_rename_post_followers_page.py  0009_alter_page_options.py  0010_page_owner_email.py
innotter/post/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
innotter/post/migrations/: 0001_initial.py  0002_alter_post_reply_to.py  0003_alter_post_content.py  0004_alter_post_options.py
innotter/tag/: models.py  pagination.py  urls.py  views.py
innotter/tag/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_tag_options.py
innotter/tests/: conftest.py
innotter/tests/pages/: test_endpoints.py
innotter/tests/posts/: test_posts_endpoints.py
innotter/tests/tags/: test_tags_endpoints.py
